bk_ida/gccida/c3/esub
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/esub/src/real.c:3237:9: error: use of undeclared identifier 'aE'
mtherr( aE, 7); 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/esub/src/obj/real.o] Error 1
